src/test/deca/context/invalid/plus_undefvar_plus_int_context.deca
// Description :
//
//      Test contextuellement incorrect de la somme de la variable stockant la somme sans définition et d'un int.
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    int y= y+2;
}